# AWS-Large-Language-Model

./: README.md  build.sbt  feedback.md
.bsp/: sbt.json
Controller/: CMakeLists.txt  Controller.cpp  FileProcessorImpl.cpp  TextProcessing.idl  TextProcessingSK.cc
Controller/include/: TextProcessing.hh
DataProcessor/: build.sbt
DataProcessor/src/main/resources/: CompileIDLScala.sh  TextProcessing.idl  application.yaml
DataProcessor/src/main/resources/TextProcessing/: Controller.java  ControllerHelper.java  ControllerHolder.java  ControllerOperations.java  ControllerPOA.java  ControllerPOATie.java  DoubleListHelper.java  DoubleListHolder.java  FileProcessor.java  FileProcessorHelper.java  FileProcessorHolder.java  FileProcessorOperations.java  FileProcessorPOA.java  FileProcessorPOATie.java  ProcessingResult.java  ProcessingResultHelper.java  ProcessingResultHolder.java  StringListHelper.java  StringListHolder.java  WordFrequency.java  WordFrequencyHelper.java  WordFrequencyHolder.java  WordFrequencyListHelper.java  WordFrequencyListHolder.java  WordMap.java  WordMapHelper.java  WordMapHolder.java  WordMapListHelper.java  WordMapListHolder.java  _ControllerStub.java  _FileProcessorStub.java
DataProcessor/src/main/scala/: ConfigLoader.scala  DataProcessor.scala  FileProcessorImpl.scala  Main.scala  ModelTrainer.scala  StatisticsPrinter.scala  TextProcessing.idl
DataProcessor/src/test/scala/: DataProcessorTest.scala
